# hayya-baca

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.config.ts  app.json  build-release.sh  build-test.sh  build.gradle  gradle.properties  jest.e2e.config.js  package-lock.json  package.json  sentry.properties  settings.gradle
backend/: .gitignore  API.md  GAMES.md  README.md  api-schema.yaml  pyproject.toml  pytest.ini
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  e2e.py  production.py
backend/games/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/games/migrations/: 0001_initial.py
backend/reading/: models.py  serializers.py  tests.py  urls.py  views.py
backend/reading/migrations/: 0001_initial.py  0002_add_timeline_fields.py  0003_readingprogress_source_device.py  0004_readinglog.py
backend/rewards/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/rewards/migrations/: 0001_initial.py  0002_rewardhistory_idempotency_key_and_more.py  0003_alter_rewardhistory_type.py
backend/sample_games/dino-jump/: index.html
backend/sample_games/memory-card/: index.html
backend/sample_games/pecah-balon/: index.html
backend/search/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/streaks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/sync/: admin.py  models.py  tests.py
(+551 files in other folders)
